--- a/Client/twiths_/Storyboard/Tour.storyboard
+++ b/Client/twiths_/Storyboard/Tour.storyboard
@@ -34,31 +34,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="7pb-4O-XnH">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zP4-Ax-85x">
-                                    <rect key="frame" x="8" y="13" width="359" height="29"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <segments>
-                                        <segment title="코스"/>
-                                        <segment title="지도"/>
-                                        <segment title="리뷰"/>
-                                    </segments>
-                                    <connections>
-                                        <action selector="SelectionChanged:" destination="bL3-f5-AND" eventType="valueChanged" id="ITu-m4-9bE"/>
-                                    </connections>
-                                </segmentedControl>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TourInfoCell" rowHeight="50" id="a05-1U-QrW" customClass="tourInfoCell" customModule="twiths_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="83" width="375" height="50"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TourInfoCell" rowHeight="97" id="a05-1U-QrW" customClass="tourInfoCell" customModule="twiths_" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="97"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="a05-1U-QrW" id="FWy-hR-YaH">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="96.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AP0-We-xXG">
@@ -79,16 +60,26 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pD5-RV-HmB">
+                                            <rect key="frame" x="16" y="58" width="343" height="28"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="코스"/>
+                                                <segment title="지도"/>
+                                                <segment title="리뷰"/>
+                                            </segments>
+                                        </segmentedControl>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="MenuSelect" destination="pD5-RV-HmB" id="opf-bs-9zq"/>
                                     <outlet property="clockIcon" destination="AP0-We-xXG" id="COH-6j-p12"/>
                                     <outlet property="proceedRate" destination="hRf-qD-nyp" id="ji3-Ph-QO0"/>
                                     <outlet property="timeLeft" destination="2SY-2r-ODP" id="fZq-73-YGO"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LandmarkListREUSE" rowHeight="127" id="OAl-5O-hal" customClass="LandmarkCell" customModule="twiths_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="133" width="375" height="127"/>
+                                <rect key="frame" x="0.0" y="125" width="375" height="127"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OAl-5O-hal" id="SlJ-9j-dgv">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="126.5"/>
@@ -133,7 +124,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MapREUSE" rowHeight="250" id="uAu-u0-is1" customClass="MapCell" customModule="twiths_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="260" width="375" height="250"/>
+                                <rect key="frame" x="0.0" y="252" width="375" height="250"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uAu-u0-is1" id="aJx-PU-PrF">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
@@ -150,7 +141,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewREUSE" rowHeight="100" id="gry-hV-mMe" customClass="ReviewCell" customModule="twiths_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="510" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="502" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gry-hV-mMe" id="77p-Dx-43v">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
